test/tests/compiler/7_compound_statements/valid/inner_uninitialized.plx



pub fn main(none) i32 {
    x: i32 = 4
    {
        x: i32;
    }
    return x
}
