test/tests/compiler/7_compound_statements/invalid_semantics/use_before_declare.plx
pub fn main(none) i32 {
    a: i32;
    {
        b = 10
    }
    b: i32;
    return b
}
